--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
+structlog==24.1.0
 urllib3==2.2.1
 websocket-client==1.7.0
 wrapt==1.16.0
