Add "console_scripts" to "setup.py" and enhance requirements resolution
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,6 @@ classifiers =
     Topic :: System :: Clustering
     Topic :: System :: Systems Administration
     Topic :: Utilities
+
+[options]
+install_requires=file:requirements.txt
