--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cachetools==5.3.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography==42.0.4
+cryptography>=38.0.0,<42.0.0
 decorator==5.1.1
 Deprecated==1.2.14
 fabric==3.2.2
@@ -19,7 +19,6 @@ pycparser==2.21
 PyNaCl==1.5.0
 python-dateutil==2.8.2
 PyYAML==6.0.1
-rados==2.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
