--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,9 @@ requires = [ "setuptools", "wheel" ]
 build-backend = "setuptools.build_meta"
 
 [project]
+name = "Rookify"
+version = "0.0.1"
 requires-python = ">=3.9"
+readme = "README.md"
+description = "Migration tool"
+license.file = "LICENSE"
