--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ fabric==3.2.2
 google-auth==2.28.1
 idna==3.6
 invoke==2.2.0
+Jinja2==3.1.3
 kubernetes==29.0.0
+MarkupSafe==2.1.5
 oauthlib==3.2.2
 paramiko==3.4.0
 pyasn1==0.5.1
