--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,4 @@ repos:
         args: [--strict, --ignore-missing-imports, --check-untyped-defs]
         additional_dependencies:
           - types-PyYAML
+          - types-paramiko==3.4.0.*
