--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     rev: v4.5.0
     hooks:
       - id: check-yaml
+        args: [ --allow-multiple-documents ]
       - id: check-json
       - id: check-toml
       - id: check-merge-conflict
