fix: adapt example to have corret config path, add typing, add rudimentary makefile command to download config from testbed
Signed-off-by: Rafael te Boekhorst <boekhorst@b1-systems.de>

--- a/src/config.example.yaml
+++ b/src/config.example.yaml
@@ -8,7 +8,7 @@ logging:
     renderer: console # or: json
 
 ceph:
-  conf_file: ../.ceph/ceph.conf
+  config: ../.ceph/ceph.conf
   keyring: ../.ceph/ceph.client.admin.keyring
 
 ssh:
