Add basic logging functionality
Signed-off-by: Rafael te Boekhorst <boekhorst@b1-systems.de>
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>
Co-authored-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/config.example.yaml
+++ b/src/config.example.yaml
@@ -1,8 +1,14 @@
 general:
   module_data_file: data.yaml
 
+logging:
+  level: INFO # level at which logging should start
+  format:
+    time: "%Y-%m-%d %H:%M.%S" # other example: "iso"
+    renderer: console # or: json
+
 ceph:
-  conf_file: ../.ceph/ceph.conf
+  config: ../.ceph/ceph.conf
   keyring: ../.ceph/ceph.client.admin.keyring
 
 ssh:
