Add support to set required `cephx` auth config
Closes: #37
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/config.example.yaml
+++ b/src/config.example.yaml
@@ -35,6 +35,7 @@ rook:
     image: quay.io/ceph/ceph:v18.2.1
 
 migration_modules:
+- cephx_auth_config
 - migrate_osds
 - migrate_monitors
 - example
