Add YAML config schema and validation
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,6 @@ install_requires=file:requirements.txt
 [options.extras_require]
 tests =
     pytest==8.0.2
+
+[options.package_data]
+rookify=config.schema.yaml
