Split "preflight" and "execution" transition states and store state data
This changes the way `preflight()` and `execute()` (formerly `run()`) methods are executed by "transitions". Additionally use Python's "pickle" formatted file to store arbitrary state data.

Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/src/config.example.yaml
+++ b/src/config.example.yaml
@@ -1,5 +1,5 @@
 general:
-  module_data_file: data.yaml
+  machine_pickle_file: data.pickle
 
 logging:
   level: INFO # level at which logging should start
