--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.4
+dill==0.3.8
 decorator==5.1.1
 Deprecated==1.2.14
 fabric==3.2.2
