--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [ "setuptools", "wheel" ]
 build-backend = "setuptools.build_meta"
 
 [project]
-dynamic = ["dependencies", "scripts", "version"]
+dynamic = ["dependencies", "optional-dependencies", "scripts", "version"]
 requires-python = ">=3.9"
 
 name = "Rookify"
