fix: add output for existing rados tools and adapt docker-compose.yml
Signed-off-by: Rafael te Boekhorst <boekhorst@b1-systems.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       args:
         ROOKIFY_VERSION: ${ROOKIFY_VERSION}
     volumes:
-      - ./config.yaml:/app/rookify/config.yaml:Z
+      - ./src/config.yaml:/app/rookify/config.yaml:Z # Be sure your config.yaml is correct, see src/config.example.yml and copy it to the root of the app
+      - .ceph:/app/.ceph:Z # note: you might need to use sshuttle or `make vpn-sshuttle` from you testbed repo to be able to reach the container as if it was in your local network
+      - .ssh/.id_rsa.regiocloud:/app/.ssh/.id_rsa.regiocloud:Z # note: you might to need to copy this key from testbed/terraform/.ssh (depending on what your name is from the testbed)
     command: bash -c "sleep infinity"
