Add Docker build target `rookify-dev`
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: rookify-dev
       args:
-        - ROOKIFY_VERSION=${ROOKIFY_VERSION:-0.0.0.dev0}
+        - ROOKIFY_VERSION=${ROOKIFY_VERSION:-0.0.0.dev1}
     volumes:
       - ./:/app/rookify/src:Z # Be sure your config.yaml is correct, see src/config.example.yml and copy it to the root of the app
                               # note: you might have to copy the dir `.ceph/` from your testbed and then use sshuttle or `make vpn-sshuttle` from you testbed repo to be able to reach the remotes locally
