--- a/config.example.osism.yaml
+++ b/config.example.osism.yaml
@@ -41,7 +41,11 @@ rook:
     image: quay.io/ceph/ceph:v18.2.1
 
 migration_modules:
-- cephx_auth_config
-- migrate_osds
-- migrate_monitors
 - example
+- create_cluster
+- migrate_osds
+- migrate_osd_pools
+- migrate_mds
+- migrate_mds_pools
+- migrate_rgws
+- migrate_rgw_pools
