Rename module `create_cluster` to `create_rook_cluster`
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -37,7 +37,7 @@ rook:
 
 migration_modules:
 - example
-- create_cluster
+- create_rook_cluster
 - migrate_osds
 - migrate_osd_pools
 - migrate_mds
