--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cachetools==5.3.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
-cryptography!=40.0.0,!=40.0.1,<42,>=38.0.0
+cryptography==42.0.4
 dill==0.3.8
 decorator==5.1.1
 Deprecated==1.2.14
