Add GitHub pytest workflow
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,4 @@ classifiers = [
 Homepage = "https://scs.community"
 
 [tool.pytest.ini_options]
-pythonpath = [ "src" ]
+pythonpath = [ "src", "mock_src" ]
