Support creating the OSISM configuration after successful migration
Fixes: #91
Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,9 @@ cython_debug/
 # Project specific
 data.pickle
 config.yaml
+osism_configuration.yaml
+osism_images.yaml
+osism_secrets.yaml
 .ceph
 .k8s
 .ssh
