--- a/.github/workflows/on-push-pre-release.yml
+++ b/.github/workflows/on-push-pre-release.yml
@@ -13,9 +13,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Get the Git tag name
       id: get-tag-name
-      run: echo "tag-name=${GITHUB_REF/refs\/tags\/v/}"
+      run: echo "tag-name=${GITHUB_REF/refs\/tags\/v/}" >> "$GITHUB_OUTPUT"
     - name: Create Release
-      uses: actions/create-release@v2
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
