--- a/.github/workflows/on-release-publish.yml
+++ b/.github/workflows/on-release-publish.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
     - name: Checkout commit
       uses: actions/checkout@v3
+    - name: Get the Git tag name
+      id: get-tag-name
+      run: echo "tag-name=${GITHUB_REF/refs\/tags\/v/}" >> "$GITHUB_OUTPUT"
     - name: Log in to ghcr.io
       uses: docker/login-action@v3
       with:
@@ -32,6 +35,8 @@ jobs:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     - name: Build and push
       id: push
+      env:
+        ROOKIFY_VERSION: ${{ steps.get-tag-name.outputs.tag-name }}
       uses: docker/build-push-action@v6
       with:
         context: .
