Add support to change behaviour based on feature flags
This commit supports feature flags for:
- Ceph
- Kubernetes
- Rook

As we do not have feature flags for Ceph or Kubernetes yet any key is currently accepted. This will change once needed.

Signed-off-by: Tobias Wolf <wolf@b1-systems.de>

--- a/config.example.osism.yaml
+++ b/config.example.osism.yaml
@@ -39,6 +39,8 @@ rook:
     rgw_placement_label: node-role.osism.tech/rook-rgw
   ceph:
     image: quay.io/ceph/ceph:v18.2.1
+  flags:
+    mds_support_metadata_name: False
 
 migration_modules:
 - example
